syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bluecc.hubs.stub";
option java_outer_classname = "OrderProto";
option objc_class_prefix = "Order";

package domain;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

import "date.proto";
import "timeofday.proto";
import "routines.proto";
import "condition.proto";

// flat-ent: Order Adjustment
message OrderAdjustmentFlatData {
    option (routines.entity_type) = "OrderAdjustment";
    option (routines.keys).keys = "order_adjustment_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: orderAdjustmentId
        
    string order_adjustment_id = 1 [json_name = "order_adjustment_id"];    
    string order_adjustment_type_id = 2 [json_name = "order_adjustment_type_id"];    
    string order_id = 3 [json_name = "order_id"];    
    string order_item_seq_id = 4 [json_name = "order_item_seq_id"];    
    string ship_group_seq_id = 5 [json_name = "ship_group_seq_id"];    
    string comments = 6 [json_name = "comments"];    
    string description = 7 [json_name = "description"];    
    routines.Currency amount = 8 [json_name = "amount"];    
    routines.Currency recurring_amount = 9 [json_name = "recurring_amount"];    
    routines.Currency amount_already_included = 10 [json_name = "amount_already_included"];    
    string product_promo_id = 11 [json_name = "product_promo_id"];    
    string product_promo_rule_id = 12 [json_name = "product_promo_rule_id"];    
    string product_promo_action_seq_id = 13 [json_name = "product_promo_action_seq_id"];    
    string product_feature_id = 14 [json_name = "product_feature_id"];    
    string corresponding_product_id = 15 [json_name = "corresponding_product_id"];    
    string tax_authority_rate_seq_id = 16 [json_name = "tax_authority_rate_seq_id"];    
    string source_reference_id = 17 [json_name = "source_reference_id"];    
    routines.FixedPoint source_percentage = 18 [json_name = "source_percentage"];    
    string customer_reference_id = 19 [json_name = "customer_reference_id"];
    string primary_geo_id = 20 [json_name = "primary_geo_id"]; // Geo
    string secondary_geo_id = 21 [json_name = "secondary_geo_id"]; // Geo    
    routines.Currency exempt_amount = 22 [json_name = "exempt_amount"];    
    string tax_auth_geo_id = 23 [json_name = "tax_auth_geo_id"];    
    string tax_auth_party_id = 24 [json_name = "tax_auth_party_id"];    
    string override_gl_account_id = 25 [json_name = "override_gl_account_id"];    
    routines.Indicator include_in_tax = 26 [json_name = "include_in_tax"];    
    routines.Indicator include_in_shipping = 27 [json_name = "include_in_shipping"];    
    routines.Indicator is_manual = 28 [json_name = "is_manual"];    
    google.protobuf.Timestamp created_date = 29 [json_name = "created_date"];    
    string created_by_user_login = 30 [json_name = "created_by_user_login"];    
    google.protobuf.Timestamp last_modified_date = 31 [json_name = "last_modified_date"];    
    string last_modified_by_user_login = 32 [json_name = "last_modified_by_user_login"];    
    string original_adjustment_id = 33 [json_name = "original_adjustment_id"];    
    google.protobuf.Timestamp last_updated_tx_stamp = 34 [json_name = "last_updated_tx_stamp"];    
    google.protobuf.Timestamp created_tx_stamp = 35 [json_name = "created_tx_stamp"];    
    string tenant_id = 36 [json_name = "tenant_id"]; 

    // extra
    google.protobuf.Struct extra = 57;
    map<string, google.protobuf.Any> attachments = 58 ;
}


// Order Adjustment Billing
message OrderAdjustmentBillingData {
    option (routines.entity_type) = "OrderAdjustmentBilling";
    option (routines.keys).keys = "order_adjustment_id, invoice_id, invoice_item_seq_id";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: orderAdjustmentId, invoiceId, invoiceItemSeqId
    // fields
        
    string order_adjustment_id = 1 [json_name = "order_adjustment_id"];    
    string invoice_id = 2 [json_name = "invoice_id"];    
    string invoice_item_seq_id = 3 [json_name = "invoice_item_seq_id"];    
    routines.Currency amount = 4 [json_name = "amount"];    
    google.protobuf.Timestamp last_updated_tx_stamp = 5 [json_name = "last_updated_tx_stamp"];    
    google.protobuf.Timestamp created_tx_stamp = 6 [json_name = "created_tx_stamp"];    
    string id = 7 [json_name = "id"];
        

    // extra
    google.protobuf.Struct extra = 11;
    map<string, google.protobuf.Any> attachments = 12;
}


// Order Contact Mechanism
message OrderContactMechData {
    option (routines.entity_type) = "OrderContactMech";
    option (routines.keys).keys = "order_id, contact_mech_purpose_type_id, contact_mech_id";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: orderId, contactMechPurposeTypeId, contactMechId
    // fields
        
    string order_id = 1 [json_name = "order_id"];
    string contact_mech_purpose_type_id = 2 [json_name = "contact_mech_purpose_type_id"]; // ContactMechPurposeType    
    string contact_mech_id = 3 [json_name = "contact_mech_id"];    
    google.protobuf.Timestamp last_updated_tx_stamp = 4 [json_name = "last_updated_tx_stamp"];    
    google.protobuf.Timestamp created_tx_stamp = 5 [json_name = "created_tx_stamp"];    
    string id = 6 [json_name = "id"];
        

    // extra
    google.protobuf.Struct extra = 9;
    map<string, google.protobuf.Any> attachments = 10;
}


// flat-ent: Order Header
message OrderHeaderFlatData {
    option (routines.entity_type) = "OrderHeader";
    option (routines.keys).keys = "order_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: orderId
        
    string order_id = 1 [json_name = "order_id"];    
    string order_type_id = 2 [json_name = "order_type_id"];    
    string order_name = 3 [json_name = "order_name"];    
    string external_id = 4 [json_name = "external_id"];
    string sales_channel_enum_id = 5 [json_name = "sales_channel_enum_id"]; // Enumeration    
    google.protobuf.Timestamp order_date = 6 [json_name = "order_date"];    
    routines.Indicator priority = 7 [json_name = "priority"];    
    google.protobuf.Timestamp entry_date = 8 [json_name = "entry_date"];    
    google.protobuf.Timestamp pick_sheet_printed_date = 9 [json_name = "pick_sheet_printed_date"];    
    string visit_id = 10 [json_name = "visit_id"];
    string status_id = 11 [json_name = "status_id"]; // StatusItem    
    string created_by = 12 [json_name = "created_by"];    
    string first_attempt_order_id = 13 [json_name = "first_attempt_order_id"];
    string currency_uom = 14 [json_name = "currency_uom"]; // Uom
    string sync_status_id = 15 [json_name = "sync_status_id"]; // StatusItem    
    string billing_account_id = 16 [json_name = "billing_account_id"];    
    string origin_facility_id = 17 [json_name = "origin_facility_id"];    
    string web_site_id = 18 [json_name = "web_site_id"];    
    string product_store_id = 19 [json_name = "product_store_id"];    
    string agreement_id = 20 [json_name = "agreement_id"];    
    string terminal_id = 21 [json_name = "terminal_id"];    
    string transaction_id = 22 [json_name = "transaction_id"];    
    string auto_order_shopping_list_id = 23 [json_name = "auto_order_shopping_list_id"];    
    routines.Indicator needs_inventory_issuance = 24 [json_name = "needs_inventory_issuance"];    
    routines.Indicator is_rush_order = 25 [json_name = "is_rush_order"];    
    string internal_code = 26 [json_name = "internal_code"];    
    routines.Currency remaining_sub_total = 27 [json_name = "remaining_sub_total"];    
    routines.Currency grand_total = 28 [json_name = "grand_total"];    
    routines.Indicator is_viewed = 29 [json_name = "is_viewed"];    
    routines.Indicator invoice_per_shipment = 30 [json_name = "invoice_per_shipment"];    
    google.protobuf.Timestamp last_updated_tx_stamp = 31 [json_name = "last_updated_tx_stamp"];    
    google.protobuf.Timestamp created_tx_stamp = 32 [json_name = "created_tx_stamp"];    
    string tenant_id = 33 [json_name = "tenant_id"]; 

    // extra
    google.protobuf.Struct extra = 96;
    map<string, google.protobuf.Any> attachments = 97 ;
}


// flat-ent: Order Item
message OrderItemFlatData {
    option (routines.entity_type) = "OrderItem";
    option (routines.keys).keys = "order_id, order_item_seq_id";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: orderId, orderItemSeqId
        
    string order_id = 1 [json_name = "order_id"];    
    string order_item_seq_id = 2 [json_name = "order_item_seq_id"];    
    string external_id = 3 [json_name = "external_id"];    
    string order_item_type_id = 4 [json_name = "order_item_type_id"];    
    string order_item_group_seq_id = 5 [json_name = "order_item_group_seq_id"];    
    routines.Indicator is_item_group_primary = 6 [json_name = "is_item_group_primary"];    
    string from_inventory_item_id = 7 [json_name = "from_inventory_item_id"];    
    string budget_id = 8 [json_name = "budget_id"];    
    string budget_item_seq_id = 9 [json_name = "budget_item_seq_id"];    
    string product_id = 10 [json_name = "product_id"];    
    string supplier_product_id = 11 [json_name = "supplier_product_id"];    
    string product_feature_id = 12 [json_name = "product_feature_id"];    
    string prod_catalog_id = 13 [json_name = "prod_catalog_id"];    
    string product_category_id = 14 [json_name = "product_category_id"];    
    routines.Indicator is_promo = 15 [json_name = "is_promo"];    
    string quote_id = 16 [json_name = "quote_id"];    
    string quote_item_seq_id = 17 [json_name = "quote_item_seq_id"];    
    string shopping_list_id = 18 [json_name = "shopping_list_id"];    
    string shopping_list_item_seq_id = 19 [json_name = "shopping_list_item_seq_id"];    
    string subscription_id = 20 [json_name = "subscription_id"];    
    string deployment_id = 21 [json_name = "deployment_id"];    
    routines.FixedPoint quantity = 22 [json_name = "quantity"];    
    routines.FixedPoint cancel_quantity = 23 [json_name = "cancel_quantity"];    
    routines.FixedPoint selected_amount = 24 [json_name = "selected_amount"];    
    routines.Currency unit_price = 25 [json_name = "unit_price"];    
    routines.Currency unit_list_price = 26 [json_name = "unit_list_price"];    
    routines.Currency unit_average_cost = 27 [json_name = "unit_average_cost"];    
    routines.Currency unit_recurring_price = 28 [json_name = "unit_recurring_price"];    
    routines.Indicator is_modified_price = 29 [json_name = "is_modified_price"];
    string recurring_freq_uom_id = 30 [json_name = "recurring_freq_uom_id"]; // Uom    
    string item_description = 31 [json_name = "item_description"];    
    string comments = 32 [json_name = "comments"];    
    string corresponding_po_id = 33 [json_name = "corresponding_po_id"];
    string status_id = 34 [json_name = "status_id"]; // StatusValidChange
    string sync_status_id = 35 [json_name = "sync_status_id"]; // StatusItem    
    google.protobuf.Timestamp estimated_ship_date = 36 [json_name = "estimated_ship_date"];    
    google.protobuf.Timestamp estimated_delivery_date = 37 [json_name = "estimated_delivery_date"];    
    google.protobuf.Timestamp auto_cancel_date = 38 [json_name = "auto_cancel_date"];    
    google.protobuf.Timestamp dont_cancel_set_date = 39 [json_name = "dont_cancel_set_date"];    
    string dont_cancel_set_user_login = 40 [json_name = "dont_cancel_set_user_login"];    
    google.protobuf.Timestamp ship_before_date = 41 [json_name = "ship_before_date"];    
    google.protobuf.Timestamp ship_after_date = 42 [json_name = "ship_after_date"];    
    google.protobuf.Timestamp reserve_after_date = 43 [json_name = "reserve_after_date"];    
    google.protobuf.Timestamp cancel_back_order_date = 44 [json_name = "cancel_back_order_date"];    
    string override_gl_account_id = 45 [json_name = "override_gl_account_id"];    
    string sales_opportunity_id = 46 [json_name = "sales_opportunity_id"];    
    string change_by_user_login_id = 47 [json_name = "change_by_user_login_id"];    
    google.protobuf.Timestamp last_updated_tx_stamp = 48 [json_name = "last_updated_tx_stamp"];    
    google.protobuf.Timestamp created_tx_stamp = 49 [json_name = "created_tx_stamp"];    
    string id = 50 [json_name = "id"];    
    string tenant_id = 51 [json_name = "tenant_id"]; 

    // extra
    google.protobuf.Struct extra = 102;
    map<string, google.protobuf.Any> attachments = 103 ;
}


// Order Item Billing
message OrderItemBillingData {
    option (routines.entity_type) = "OrderItemBilling";
    option (routines.keys).keys = "order_id, order_item_seq_id, invoice_id, invoice_item_seq_id";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: orderId, orderItemSeqId, invoiceId, invoiceItemSeqId
    // fields
        
    string order_id = 1 [json_name = "order_id"];    
    string order_item_seq_id = 2 [json_name = "order_item_seq_id"];    
    string invoice_id = 3 [json_name = "invoice_id"];    
    string invoice_item_seq_id = 4 [json_name = "invoice_item_seq_id"];    
    string item_issuance_id = 5 [json_name = "item_issuance_id"];    
    string shipment_receipt_id = 6 [json_name = "shipment_receipt_id"];    
    routines.FixedPoint quantity = 7 [json_name = "quantity"];    
    routines.Currency amount = 8 [json_name = "amount"];    
    google.protobuf.Timestamp last_updated_tx_stamp = 9 [json_name = "last_updated_tx_stamp"];    
    google.protobuf.Timestamp created_tx_stamp = 10 [json_name = "created_tx_stamp"];    
    string id = 11 [json_name = "id"];
        

    // extra
    google.protobuf.Struct extra = 18;
    map<string, google.protobuf.Any> attachments = 19;
}


// flat-ent: Order Item Price Info
message OrderItemPriceInfoFlatData {
    option (routines.entity_type) = "OrderItemPriceInfo";
    option (routines.keys).keys = "order_item_price_info_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: orderItemPriceInfoId
        
    string order_item_price_info_id = 1 [json_name = "order_item_price_info_id"];    
    string order_id = 2 [json_name = "order_id"];    
    string order_item_seq_id = 3 [json_name = "order_item_seq_id"];    
    string product_price_rule_id = 4 [json_name = "product_price_rule_id"];    
    string product_price_action_seq_id = 5 [json_name = "product_price_action_seq_id"];    
    routines.Currency modify_amount = 6 [json_name = "modify_amount"];    
    string description = 7 [json_name = "description"];    
    string rate_code = 8 [json_name = "rate_code"];    
    google.protobuf.Timestamp last_updated_tx_stamp = 9 [json_name = "last_updated_tx_stamp"];    
    google.protobuf.Timestamp created_tx_stamp = 10 [json_name = "created_tx_stamp"];    
    string tenant_id = 11 [json_name = "tenant_id"]; 

    // extra
    google.protobuf.Struct extra = 17;
    map<string, google.protobuf.Any> attachments = 18 ;
}


// Order Item Ship Group
message OrderItemShipGroupData {
    option (routines.entity_type) = "OrderItemShipGroup";
    option (routines.keys).keys = "order_id, ship_group_seq_id";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: orderId, shipGroupSeqId
    // fields
        
    string order_id = 1 [json_name = "order_id"];    
    string ship_group_seq_id = 2 [json_name = "ship_group_seq_id"];    
    string shipment_method_type_id = 3 [json_name = "shipment_method_type_id"];    
    string supplier_party_id = 4 [json_name = "supplier_party_id"];    
    string supplier_agreement_id = 5 [json_name = "supplier_agreement_id"];    
    string vendor_party_id = 6 [json_name = "vendor_party_id"];    
    string carrier_party_id = 7 [json_name = "carrier_party_id"];    
    string carrier_role_type_id = 8 [json_name = "carrier_role_type_id"];    
    string facility_id = 9 [json_name = "facility_id"];    
    string contact_mech_id = 10 [json_name = "contact_mech_id"];    
    string telecom_contact_mech_id = 11 [json_name = "telecom_contact_mech_id"];    
    string tracking_number = 12 [json_name = "tracking_number"];    
    string shipping_instructions = 13 [json_name = "shipping_instructions"];    
    routines.Indicator may_split = 14 [json_name = "may_split"];    
    string gift_message = 15 [json_name = "gift_message"];    
    routines.Indicator is_gift = 16 [json_name = "is_gift"];    
    google.protobuf.Timestamp ship_after_date = 17 [json_name = "ship_after_date"];    
    google.protobuf.Timestamp ship_by_date = 18 [json_name = "ship_by_date"];    
    google.protobuf.Timestamp estimated_ship_date = 19 [json_name = "estimated_ship_date"];    
    google.protobuf.Timestamp estimated_delivery_date = 20 [json_name = "estimated_delivery_date"];    
    google.protobuf.Timestamp last_updated_tx_stamp = 21 [json_name = "last_updated_tx_stamp"];    
    google.protobuf.Timestamp created_tx_stamp = 22 [json_name = "created_tx_stamp"];    
    string id = 23 [json_name = "id"];
        

    // extra
    google.protobuf.Struct extra = 42;
    map<string, google.protobuf.Any> attachments = 43;
}


// Order Item Package Association
message OrderItemShipGroupAssocData {
    option (routines.entity_type) = "OrderItemShipGroupAssoc";
    option (routines.keys).keys = "order_id, order_item_seq_id, ship_group_seq_id";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: orderId, orderItemSeqId, shipGroupSeqId
    // fields
        
    string order_id = 1 [json_name = "order_id"];    
    string order_item_seq_id = 2 [json_name = "order_item_seq_id"];    
    string ship_group_seq_id = 3 [json_name = "ship_group_seq_id"];    
    routines.FixedPoint quantity = 4 [json_name = "quantity"];    
    routines.FixedPoint cancel_quantity = 5 [json_name = "cancel_quantity"];    
    google.protobuf.Timestamp last_updated_tx_stamp = 6 [json_name = "last_updated_tx_stamp"];    
    google.protobuf.Timestamp created_tx_stamp = 7 [json_name = "created_tx_stamp"];    
    string id = 8 [json_name = "id"];
        

    // extra
    google.protobuf.Struct extra = 14;
    map<string, google.protobuf.Any> attachments = 15;
}


// Order Item Inventory Reservation
message OrderItemShipGrpInvResData {
    option (routines.entity_type) = "OrderItemShipGrpInvRes";
    option (routines.keys).keys = "order_id, ship_group_seq_id, order_item_seq_id, inventory_item_id";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: orderId, shipGroupSeqId, orderItemSeqId, inventoryItemId
    // fields
        
    string order_id = 1 [json_name = "order_id"];    
    string ship_group_seq_id = 2 [json_name = "ship_group_seq_id"];    
    string order_item_seq_id = 3 [json_name = "order_item_seq_id"];    
    string inventory_item_id = 4 [json_name = "inventory_item_id"];    
    string reserve_order_enum_id = 5 [json_name = "reserve_order_enum_id"];    
    routines.FixedPoint quantity = 6 [json_name = "quantity"];    
    routines.FixedPoint quantity_not_available = 7 [json_name = "quantity_not_available"];    
    google.protobuf.Timestamp reserved_datetime = 8 [json_name = "reserved_datetime"];    
    google.protobuf.Timestamp created_datetime = 9 [json_name = "created_datetime"];    
    google.protobuf.Timestamp promised_datetime = 10 [json_name = "promised_datetime"];    
    google.protobuf.Timestamp current_promised_date = 11 [json_name = "current_promised_date"];    
    routines.Indicator priority = 12 [json_name = "priority"];    
    int64 sequence_id = 13 [json_name = "sequence_id"];    
    google.protobuf.Timestamp last_updated_tx_stamp = 14 [json_name = "last_updated_tx_stamp"];    
    google.protobuf.Timestamp created_tx_stamp = 15 [json_name = "created_tx_stamp"];    
    string id = 16 [json_name = "id"];
        

    // extra
    google.protobuf.Struct extra = 24;
    map<string, google.protobuf.Any> attachments = 25;
}


// flat-ent: The Order Payment Preference
message OrderPaymentPreferenceFlatData {
    option (routines.entity_type) = "OrderPaymentPreference";
    option (routines.keys).keys = "order_payment_preference_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: orderPaymentPreferenceId
        
    string order_payment_preference_id = 1 [json_name = "order_payment_preference_id"];    
    string order_id = 2 [json_name = "order_id"];    
    string order_item_seq_id = 3 [json_name = "order_item_seq_id"];    
    string ship_group_seq_id = 4 [json_name = "ship_group_seq_id"];
    string product_price_purpose_id = 5 [json_name = "product_price_purpose_id"]; // ProductPricePurpose
    string payment_method_type_id = 6 [json_name = "payment_method_type_id"]; // PaymentMethodType    
    string payment_method_id = 7 [json_name = "payment_method_id"];    
    string fin_account_id = 8 [json_name = "fin_account_id"];    
    string security_code = 9 [json_name = "security_code"];    
    string track2 = 10 [json_name = "track2"];    
    routines.Indicator present_flag = 11 [json_name = "present_flag"];    
    routines.Indicator swiped_flag = 12 [json_name = "swiped_flag"];    
    routines.Indicator overflow_flag = 13 [json_name = "overflow_flag"];    
    routines.Currency max_amount = 14 [json_name = "max_amount"];    
    int64 process_attempt = 15 [json_name = "process_attempt"];    
    string billing_postal_code = 16 [json_name = "billing_postal_code"];    
    string manual_auth_code = 17 [json_name = "manual_auth_code"];    
    string manual_ref_num = 18 [json_name = "manual_ref_num"];
    string status_id = 19 [json_name = "status_id"]; // StatusItem    
    routines.Indicator needs_nsf_retry = 20 [json_name = "needs_nsf_retry"];    
    google.protobuf.Timestamp created_date = 21 [json_name = "created_date"];    
    string created_by_user_login = 22 [json_name = "created_by_user_login"];    
    google.protobuf.Timestamp last_modified_date = 23 [json_name = "last_modified_date"];    
    string last_modified_by_user_login = 24 [json_name = "last_modified_by_user_login"];    
    google.protobuf.Timestamp last_updated_tx_stamp = 25 [json_name = "last_updated_tx_stamp"];    
    google.protobuf.Timestamp created_tx_stamp = 26 [json_name = "created_tx_stamp"];    
    string tenant_id = 27 [json_name = "tenant_id"]; 

    // extra
    google.protobuf.Struct extra = 45;
    map<string, google.protobuf.Any> attachments = 46 ;
}


// Order Role
message OrderRoleData {
    option (routines.entity_type) = "OrderRole";
    option (routines.keys).keys = "order_id, party_id, role_type_id";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: orderId, partyId, roleTypeId
    // fields
        
    string order_id = 1 [json_name = "order_id"];    
    string party_id = 2 [json_name = "party_id"];
    string role_type_id = 3 [json_name = "role_type_id"]; // RoleType    
    google.protobuf.Timestamp last_updated_tx_stamp = 4 [json_name = "last_updated_tx_stamp"];    
    google.protobuf.Timestamp created_tx_stamp = 5 [json_name = "created_tx_stamp"];    
    string id = 6 [json_name = "id"];
        

    // extra
    google.protobuf.Struct extra = 11;
    map<string, google.protobuf.Any> attachments = 12;
}


// flat-ent: Order Status
message OrderStatusFlatData {
    option (routines.entity_type) = "OrderStatus";
    option (routines.keys).keys = "order_status_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: orderStatusId
        
    string order_status_id = 1 [json_name = "order_status_id"];
    string status_id = 2 [json_name = "status_id"]; // StatusItem    
    string order_id = 3 [json_name = "order_id"];    
    string order_item_seq_id = 4 [json_name = "order_item_seq_id"];    
    string order_payment_preference_id = 5 [json_name = "order_payment_preference_id"];    
    google.protobuf.Timestamp status_datetime = 6 [json_name = "status_datetime"];    
    string status_user_login = 7 [json_name = "status_user_login"];    
    string change_reason = 8 [json_name = "change_reason"];    
    google.protobuf.Timestamp last_updated_tx_stamp = 9 [json_name = "last_updated_tx_stamp"];    
    google.protobuf.Timestamp created_tx_stamp = 10 [json_name = "created_tx_stamp"];    
    string tenant_id = 11 [json_name = "tenant_id"]; 

    // extra
    google.protobuf.Struct extra = 18;
    map<string, google.protobuf.Any> attachments = 19 ;
}


